--- a/source/asset/css/_part/translater.styl
+++ b/source/asset/css/_part/translater.styl
@@ -4,43 +4,43 @@
   to
     opacity 1
 
-[p-translater]
+.p-translater
   user-select none
   line-height 3
-  font-size 0.8em
+  font-size 0.88em
   white-space normal
   animation translater-appear 0.6s ease
   transition all 0.6s
   position relative
   z-index zIndex(10)
-  [p-translater-bar]
-    border-radius $gap
+  .p-translater-bar
+    border-radius $gap * 0.5
     border 1px solid var(--color-clear)
     background var(--color-background)
     overflow hidden
     > span
       display block
-    [p-translater-bar-to], [p-translater-bar-zh], [p-translater-bar-en], [p-translater-bar-jp]
+    .p-translater-bar-to, .p-translater-bar-zh, .p-translater-bar-en, .p-translater-bar-jp
       float left
       padding 0 1em
-    [p-translater-bar-copy]
+    .p-translater-bar-copy
       float right
       padding 0 1em
       background var(--color-clear)
       cursor pointer
       transition background 0.6s
-      @media (min-width: $app_mobile_width)
+      @media (min-width: $app_mobile_width_min)
         &:hover
           color var(--color-background)
           background var(--color-text)
-    [p-translater-bar-to]
+    .p-translater-bar-to
       background var(--color-clear)
-    [p-translater-bar-zh], [p-translater-bar-en], [p-translater-bar-jp]
+    .p-translater-bar-zh, .p-translater-bar-en, .p-translater-bar-jp
       cursor pointer
       color var(--color-link)
       position relative
       font-weight bold
-      @media (min-width: $app_mobile_width)
+      @media (min-width: $app_mobile_width_min)
         &:before
           content ''
           position absolute
@@ -53,12 +53,12 @@
         &:hover
           &:before
             width 100%
-    [p-translater-bar-split]
+    .p-translater-bar-split
       float left
       font-weight bold
-  [p-translater-result]
+  .p-translater-result
     display none
-    border-radius $gap
+    border-radius $gap * 0.5
     border 1px solid var(--color-clear)
     background var(--color-background)
     position absolute
@@ -74,11 +74,11 @@
     p.content
       padding-top $gap * 2
       text-indent 2em
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &.active
-      [p-translater-bar]
-        border-radius $gap $gap 0 0
-      [p-translater-result]
-        border-radius 0 0 $gap $gap
+      .p-translater-bar
+        border-radius $gap * 0.5 $gap * 0.5 0 0
+      .p-translater-result
+        border-radius 0 0 $gap * 0.5 ($gap * 0.5)
   @media (max-width: $app_mobile_width)
     display none
