--- a/source/asset/css/style.styl
+++ b/source/asset/css/style.styl
@@ -1,4 +1,3 @@
-@import 'nib'
 // Common
 @import '_common/dimension'
 @import '_common/color'
@@ -12,6 +11,7 @@
 @import '_common/layout'
 // Part
 @import '_part/goingto'
+@import '_part/extension'
 @import '_part/search'
 @import '_part/xdrawer'
 @import '_part/xaside'
@@ -33,5 +33,5 @@
 @import '_part/timeline'
 @import '_part/post'
 @import '_part/page'
-// Test
-@import 'test'
+@import '_part/records'
+@import '_part/gallery'
