--- a/source/browser.ejs
+++ b/source/browser.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
   <link rel="shortcut icon" type="image/png" href="<%= theme.favicon.small %>">
-  <title>666 - <%= config.title %></title>
+  <title><%= config.title %></title>
   <style>
     * {
       padding: 0;
@@ -47,8 +47,8 @@
 <body>
   <div code>666</div>
   <div message>
-    <div>推荐使用最新<a href="https://www.google.com/chrome/">谷歌浏览器</a></div>
-    <div>Recommend to use the latest <a href="https://www.google.com/chrome/">Google Chrome</a></div>
+    <div>推荐使用最新<a href="https://browser.360.cn/ee/">360极速浏览器</a></div>
+    <div>Recommend to use the latest <a href="https://browser.360.cn/ee/">360 Extreme Browser</a></div>
   </div>
 </body>
 
