--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -1,13 +1,14 @@
 <%- partial('_partial/frame', {
   favicon: theme.favicon.small,
   manifest: theme.manifest.path,
-  parts: JSON.stringify([
+  parts: JSON.stringify(typeof page.parts === 'string' ? [page.parts] : (page.parts || [
     'page'
-  ]),
+  ])),
   title: (page.title && page.title) + ' - ' + config.title,
   author: config.author,
   keywords: (page.title && page.title),
   description: (page.title && page.title) + ' - ' + config.description,
   google_site_verification: config.google_site_verification,
-  baidu_site_verification: config.baidu_site_verification
+  baidu_site_verification: config.baidu_site_verification,
+  adScript: config.adScript
 }) %>
