--- a/source/asset/css/_part/search.styl
+++ b/source/asset/css/_part/search.styl
@@ -4,52 +4,52 @@
   to
     opacity 1
 
-[p-search]
+.p-search
   user-select none
   overflow-x hidden
   overflow-y scroll
   background var(--color-spinner-back)
   animation search-appear 0.6s ease
   position fixed
-  top 0
+  top s('calc(3em + %s)', $progress_height)
   left 0
   width 100%
-  height 100%
+  height s('calc(100% + 1px - 3em - %s)', $progress_height)
   z-index zIndex(5)
   display none
   &.active
     display block
 
-[p-search-dialog]
+.p-search-dialog
   pointer-events none
   margin 20vh auto
   max-width 50%
 
-[p-search-dialog-bar], [p-search-dialog-result]
+.p-search-dialog-bar, .p-search-dialog-result
   background var(--color-background)
-  border-radius $gap
+  border-radius $gap * 0.5
   border 1px solid var(--color-clear)
   overflow hidden
 
-[p-search-dialog-bar]
+.p-search-dialog-bar
   line-height 2
   font-size 1.5em
   height 2em
   margin-bottom 2em
 
-[p-search-dialog-button]
+.p-search-dialog-button
   float right
   cursor pointer
   pointer-events all
   width 5em
   text-align center
   background var(--color-clear)
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &:hover
       background var(--color-text)
       color var(--color-background)
 
-[p-search-dialog-input]
+.p-search-dialog-input
   pointer-events all
   display block
   border none
@@ -64,7 +64,7 @@
     outline none
     box-shadow inset 0 0 $gap * 0.5 $gap * 0.25 var(--color-clear)
 
-[p-search-dialog-result]
+.p-search-dialog-result
   pointer-events all
   > div
     user-select text
@@ -76,7 +76,7 @@
     strong
       color var(--color-search-highlight)
       text-decoration underline
-    @media (min-width: $app_mobile_width)
+    @media (min-width: $app_mobile_width_min)
       a
         font-size 1.5em
         display inline-block
@@ -98,21 +98,20 @@
     font-size 2em
 
 @media (max-width: $app_mobile_width)
-  [p-search-dialog]
+  .p-search-dialog
     max-width 100%
     margin 0
-    margin-top s('calc(3em + %s)', $progress_height)
-  [p-search-dialog-bar], [p-search-dialog-result]
+  .p-search-dialog-bar, .p-search-dialog-result
     border-radius 0
-  [p-search-dialog-bar]
+  .p-search-dialog-bar
     margin-bottom 0
     font-size 1em
     line-height 3
     height 3em
-  [p-search-dialog-input]
+  .p-search-dialog-input
     line-height 3
     padding 0 1em
-  [p-search-dialog-result]
+  .p-search-dialog-result
     > div
       padding 1em
       padding-bottom 1em
