--- a/source/asset/css/_part/settings.styl
+++ b/source/asset/css/_part/settings.styl
@@ -4,25 +4,27 @@
   to
     opacity 1
 
-[p-settings]
+.p-settings
   overflow hidden
   user-select none
-  width $drawer_width - $gap * 6
-  margin $gap * 3
-  border-radius $gap
+  width $drawer_width - $gap * 8
+  margin $gap * 4
+  border-radius $gap * 0.5
   border 1px solid var(--color-clear)
   background var(--color-background)
   line-height 1
   white-space normal
   animation settings-appear 0.6s ease
 
-[p-settings-caption]
+.p-settings-caption
   padding 0 $gap
   font-size 0.8em
   line-height 2.5
   background var(--color-clear)
+  i
+    margin-right $gap * 0.5
 
-[p-settings-items]
+.p-settings-items
   padding $gap 0
 
 [data-settings-key]
@@ -35,18 +37,18 @@
     pointer-events none
   i
     margin 0 $gap * 2
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &:hover
       background var(--color-menus-hover)
-  [p-settings-items-switch]
+  .p-settings-items-switch
     float right
     width 2.625em
     height 1.5em
     margin 0.75em $gap * 2
     overflow hidden
     position relative
-    @media (min-width: $app_mobile_width)
-      border-radius $gap
+    @media (min-width: $app_mobile_width_min)
+      border-radius $gap * 0.5
     &:before
       content ''
       position absolute
@@ -58,8 +60,8 @@
       transition transform 0.6s
       transform scale(0.5)
       z-index 2
-      @media (min-width: $app_mobile_width)
-        border-radius $gap
+      @media (min-width: $app_mobile_width_min)
+        border-radius $gap * 0.5
     &:after
       content ''
       position absolute
@@ -71,10 +73,10 @@
       transition transform 0.6s
       transform scale(3)
       z-index 1
-      @media (min-width: $app_mobile_width)
-        border-radius $gap
+      @media (min-width: $app_mobile_width_min)
+        border-radius $gap * 0.5
   &.active
-    [p-settings-items-switch]
+    .p-settings-items-switch
       &:before
         transform scale(3)
       &:after
@@ -82,13 +84,15 @@
         z-index 2
 
 @media (max-width: $app_mobile_width)
-  [p-settings]
+  .p-settings
     width 100%
     margin 0
     border none
     border-bottom 1px solid var(--color-clear)
     border-radius 0
-  [p-settings-caption]
+  .p-settings-caption
     text-align center
+    i
+      display none
   [data-settings-key='transfigure'], [data-settings-key='autoplay']
     display none
