--- a/source/asset/css/_part/xaside.styl
+++ b/source/asset/css/_part/xaside.styl
@@ -1,14 +1,14 @@
-[p-xaside]
+.p-xaside
   width 2em
   line-height 2
   margin calc(0.5em - 1px)
-  border-radius $gap
+  border-radius $gap * 0.5
   text-align center
   transition background 0.6s, transform 0.6s
   cursor pointer
   user-select none
   float right
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &:hover
       background var(--color-clear)
     &:active
