--- a/source/asset/css/_part/xdrawer.styl
+++ b/source/asset/css/_part/xdrawer.styl
@@ -1,8 +1,8 @@
-[p-xdrawer]
+.p-xdrawer
   width 2em
   line-height 2
   margin 0.5em
-  border-radius $gap
+  border-radius $gap * 0.5
   text-align center
   transition background 0.6s, transform 0.6s
   cursor pointer
@@ -20,7 +20,7 @@
     background var(--color-text)
     transition opacity 0.6s
     opacity 0
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &:hover
       background var(--color-clear)
     &:active
