--- a/source/asset/css/_part/xsearch.styl
+++ b/source/asset/css/_part/xsearch.styl
@@ -4,11 +4,11 @@
   to
     opacity 1
 
-[p-xsearch]
+.p-xsearch
   width 2em
   line-height 2
   margin 0.5em
-  border-radius $gap
+  border-radius $gap * 0.5
   text-align center
   transition background 0.6s
   cursor pointer
@@ -18,7 +18,7 @@
     animation xsearch-i-appear 0.6s ease
   i:nth-child(2)
     display none
-  @media (min-width: $app_mobile_width)
+  @media (min-width: $app_mobile_width_min)
     &:hover
       background var(--color-clear)
     &:active
