--- a/source/asset/part/recentposts.ejs
+++ b/source/asset/part/recentposts.ejs
@@ -1,31 +1,32 @@
-<div p-recentposts>
-  <div p-recentposts-caption>
+<div class="p-recentposts">
+  <div class="p-recentposts-caption">
     <%- theme.recentposts.icons.caption %>
     <span data-lang="recentposts.caption"></span>
   </div>
-  <div p-recentposts-items>
-    <div p-recentpost>
-      <div p-recentpost-cover>
+  <div class="p-recentposts-items">
+    <div class="p-recentpost">
+      <div class="p-recentpost-cover">
         <div><span></span></div>
       </div>
-      <div p-recentpost-title>
-        <a p-recentpost-title-link></a>
+      <div class="p-recentpost-title">
+        <a class="p-recentpost-title-link"></a>
       </div>
-      <div p-recentpost-meta>
-        <div p-recentpost-date>
+      <div class="p-recentpost-meta">
+        <div class="p-recentpost-date">
           <%- theme.recentposts.icons.date %>
           <span data-lang="recentposts.date" data-lang-titled></span>
         </div>
-        <div p-recentpost-updated>
+        <div class="p-recentpost-updated">
           <%- theme.recentposts.icons.updated %>
           <span data-lang="recentposts.updated" data-lang-titled></span>
         </div>
-        <div p-recentpost-categories>
+        <div class="p-recentpost-categories">
           <%- theme.recentposts.icons.categories %>
           <span data-lang="recentposts.categories" data-lang-titled></span>
         </div>
       </div>
-      <div p-recentpost-excerpt></div>
+      <div class="p-recentpost-excerpt markdown-body"></div>
     </div>
   </div>
+  <div class="p-recentposts-more" data-lang="recentposts.more"></div>
 </div>
