--- a/source/asset/part/skin.ejs
+++ b/source/asset/part/skin.ejs
@@ -1,6 +1,9 @@
-<div p-skin>
-  <div p-skin-caption data-lang="skin.caption"></div>
-  <div p-skin-items>
+<div class="p-skin">
+  <div class="p-skin-caption">
+    <%- theme.skinicon %> 
+    <span data-lang="skin.caption"></span>
+  </div>
+  <div class="p-skin-items">
     <% $forIn(theme.skin, (key, color) => { %>
       <div data-skin-key="<%- key %>" data-skin-color="<%- color %>" data-lang="skin.items.<%- key %>" data-lang-titled></div>
     <% }); %>
