--- a/source/asset/part/timeline.ejs
+++ b/source/asset/part/timeline.ejs
@@ -1,19 +1,19 @@
-<div p-timeline>
-  <div p-timeline-caption>
+<div class="p-timeline">
+  <div class="p-timeline-caption">
     <%- theme.timeline.icon %>
     <span data-lang="timeline.caption"></span>
   </div>
-  <div p-timeline-items>
-    <div p-timeline-item>
-      <div p-timeline-head>
-        <div p-timeline-year></div>
-        <div p-timeline-count data-lang="timeline.count" data-lang-params></div>
+  <div class="p-timeline-items">
+    <div class="p-timeline-item">
+      <div class="p-timeline-head">
+        <div class="p-timeline-year"></div>
+        <div class="p-timeline-count" data-lang="timeline.count" data-lang-params></div>
       </div>
-      <div p-timeline-row>
-        <div p-timeline-date></div>
-        <div p-timeline-content>
-          <div p-timeline-title></div>
-          <div p-timeline-excerpt></div>
+      <div class="p-timeline-row">
+        <div class="p-timeline-date"></div>
+        <div class="p-timeline-content">
+          <div class="p-timeline-title"></div>
+          <div class="p-timeline-excerpt markdown-body"></div>
         </div>
       </div>
     </div>
